[workspace]
members = [ "sdk", "flashlight", "drift"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.0"
base64 = "0.22.1"
futures-util = "0.3.30"
log = "0.4.21"
reqwest = "0.12.4"
solana-client = "1.18.12"
solana-rpc = "1.18.12"
solana-sdk = "1.18.12"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
