[workspace]
members = [ "sdk", "flashlight", "examples" ]
resolver = "2"

[workspace.dependencies]
anchor-client = "0.27.0"
anchor-lang = "0.27.0"
base64 = "0.22.1"
futures-util = "0.3.30"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
solana-client = "1.14"
solana-metrics = "1.14"
solana-perf = "1.14"
solana-sdk = "1.14"
thiserror = "1.0.60"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }

