[package]
name = "flashlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
bs58 = "0.5.1"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
drift = { workspace = true }
env_logger = "0.11.3"
futures-util = { workspace = true }
log = { workspace = true }
lru = "0.12.3"
rand = "0.8.5"
regex = "1.10.5"
sdk = { path = "../sdk" }
serde = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = "1.14"
thiserror = { workspace = true }
tokio = { workspace = true }
