[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { workspace = true }
base64 = { workspace = true }
bytemuck = "1.15.0"
dashmap = "5.5.3"
fnv = "1.0.7"
futures-util = { workspace = true }
log = { workspace = true }
rayon = "1.9.0"
reqwest = { workspace = true }
serde_json = "1.0.117"
solana-account-decoder = "1.14"
solana-client = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

[dependencies.drift]
git = "https://github.com/drift-labs/protocol-v2.git"
rev = "2bbe28c"
features = [ "mainnet-beta", "drift-rs" ] 
