[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.27.0"
anchor-lang = { workspace = true }
async-trait = "0.1.80"
base64 = { workspace = true }
bincode = "1.3.3"
borsh = { version = "1.5.0", features = ["derive"] }
bytemuck = "1.15.0"
dashmap = "5.5.3"
fnv = "1.0.7"
futures-util = { workspace = true }
log = { workspace = true }
rayon = "1.9.0"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.117"
serde_qs = "0.13.0"
solana-account-decoder = "1.14"
solana-address-lookup-table-program = "1.14"
solana-client = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

[dependencies.drift]
git = "https://github.com/drift-labs/protocol-v2.git"
rev = "2bbe28c"
features = [ "mainnet-beta", "drift-rs" ] 

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
